<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.qyh</groupId>
	<artifactId>blog</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>blog Maven Webapp</name>
	<url>http://maven.apache.org</url>
	<properties>
		<h2.version>1.4.192</h2.version>
		<commonmark.version>0.11.0</commonmark.version>
		<spring.version>5.0.4.RELEASE</spring.version>
		<mybatis.version>3.4.6</mybatis.version>
		<mybatis-spring.version>1.3.2</mybatis-spring.version>
		<mysql.connector.version>5.1.43</mysql.connector.version>
		<hikaricp.version>2.7.8</hikaricp.version>
		<lucene.version>6.6.0</lucene.version>
		<lionsoul.version>2.2.0</lionsoul.version>
		<cage.version>1.0</cage.version>
		<javax.mail.version>1.6.0</javax.mail.version>
		<jsoup.version>1.11.2</jsoup.version>
		<gson.version>2.8.2</gson.version>
		<commons.logging>1.2</commons.logging>
		<logback.version>1.2.3</logback.version>
		<im4java.version>1.4.0</im4java.version>
		<animated.gif.version>1.4</animated.gif.version>
		<thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>
		<javax.servlet.version>3.1.0</javax.servlet.version>
		<qiniu.version>7.0.0</qiniu.version>
		<aliyun.version>2.4.0</aliyun.version>
		<rome.version>1.5.0</rome.version>
		<caffeine.version>2.6.2</caffeine.version>
		<commons.fileupload.version>1.3.3</commons.fileupload.version>
	</properties>
	<dependencies>
		<!-- spring -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<!-- mybatis -->
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>${mybatis.version}</version>
		</dependency>
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis-spring</artifactId>
			<version>${mybatis-spring.version}</version>
		</dependency>
		<!-- mysql driver -->
		<!-- http://mvnrepository.com/artifact/mysql/mysql-connector-java -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql.connector.version}</version>
		</dependency>

		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>${hikaricp.version}</version>
			<scope>compile</scope>
		</dependency>



		<!-- captcha -->
		<dependency>
			<groupId>com.github.cage</groupId>
			<artifactId>cage</artifactId>
			<version>${cage.version}</version>
		</dependency>
		<!-- mail -->
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>${javax.mail.version}</version>
		</dependency>
		<!-- jsoup -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>${jsoup.version}</version>
		</dependency>
		<!-- gson -->
		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>

		<!-- <dependency> <groupId>commons-logging</groupId> <artifactId>commons-logging</artifactId> 
			<version>${commons.logging}</version> </dependency> -->

		<!-- logback -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>

		<!-- GraphcisMagick -->
		<dependency>
			<groupId>org.im4java</groupId>
			<artifactId>im4java</artifactId>
			<version>${im4java.version}</version>
		</dependency>

		<!-- lucene -->
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-highlighter</artifactId>
			<version>${lucene.version}</version>
		</dependency>

		<dependency>
			<groupId>org.lionsoul</groupId>
			<artifactId>jcseg-core</artifactId>
			<version>${lionsoul.version}</version>
		</dependency>

		<dependency>
			<groupId>org.lionsoul</groupId>
			<artifactId>jcseg-analyzer</artifactId>
			<version>${lionsoul.version}</version>
		</dependency>


		<!-- Gif -->
		<dependency>
			<groupId>com.madgag</groupId>
			<artifactId>animated-gif-lib</artifactId>
			<version>${animated.gif.version}</version>
		</dependency>


		<!-- 模板引擎 -->
		<dependency>
			<groupId>org.thymeleaf</groupId>
			<artifactId>thymeleaf</artifactId>
			<version>${thymeleaf.version}</version>
		</dependency>

		<dependency>
			<groupId>org.thymeleaf</groupId>
			<artifactId>thymeleaf-spring5</artifactId>
			<version>${thymeleaf.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.rometools/rome -->
		<dependency>
			<groupId>com.rometools</groupId>
			<artifactId>rome</artifactId>
			<version>${rome.version}</version>
		</dependency>


<!-- 		 <dependency> <groupId>com.qiniu</groupId> <artifactId>qiniu-java-sdk</artifactId>  -->
<!-- 			<version>${qiniu.version}</version> </dependency> -->
<!-- 	<dependency> <groupId>com.aliyun.oss</groupId>  -->
<!-- 			<artifactId>aliyun-sdk-oss</artifactId> <version>${aliyun.version}</version>  -->
<!-- 			</dependency> <dependency> <groupId>org.jdom</groupId> <artifactId>jdom</artifactId>  -->
<!-- 			<version>1.1.3</version> </dependency> <dependency> <groupId>org.jdom</groupId>  -->
<!-- 			<artifactId>jdom2</artifactId> <version>2.0.6</version> </dependency> -->

		<!-- servlet api -->
		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${javax.servlet.version}</version>
		</dependency>


		<!-- markdown -->

		<dependency>
			<groupId>com.atlassian.commonmark</groupId>
			<artifactId>commonmark</artifactId>
			<version>${commonmark.version}</version>
		</dependency>
		<dependency>
			<groupId>com.atlassian.commonmark</groupId>
			<artifactId>commonmark-ext-autolink</artifactId>
			<version>${commonmark.version}</version>
		</dependency>
		<dependency>
			<groupId>com.atlassian.commonmark</groupId>
			<artifactId>commonmark-ext-gfm-tables</artifactId>
			<version>${commonmark.version}</version>
		</dependency>
		<dependency>
			<groupId>com.atlassian.commonmark</groupId>
			<artifactId>commonmark-ext-gfm-strikethrough</artifactId>
			<version>${commonmark.version}</version>
		</dependency>
		<dependency>
			<groupId>com.atlassian.commonmark</groupId>
			<artifactId>commonmark-ext-heading-anchor</artifactId>
			<version>${commonmark.version}</version>
		</dependency>

		<!-- h2 database -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>${h2.version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
			<version>${caffeine.version}</version>
		</dependency>

		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>${commons.fileupload.version}</version>
		</dependency>

		<dependency>
			<groupId>com.drewnoakes</groupId>
			<artifactId>metadata-extractor</artifactId>
			<version>2.11.0</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>